--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '^1.22.3'
-      - run: go install github.com/toml-lang/toml-test/cmd/toml-test@latest
+      - run: go install github.com/toml-lang/toml-test/cmd/toml-test@master
 
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
