--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "smol-toml",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"keywords": [
 		"toml",
 		"parser",
@@ -34,12 +34,7 @@
 		"typescript": "^5.4.5",
 		"vitest": "^1.6.0"
 	},
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"default": "./dist/index.js"
-		}
-	},
+	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"files": [
 		"README.md",
