Mark module as side-effect free

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"sideEffects": false,
 	"files": [
 		"README.md",
 		"LICENSE",
